[package]
name = "ansi-img"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.9"
term_size = "0.3.2"
ctrlc = "3.5.2"
clap = { version = "4.5.60", features = ["derive"] }
libc = "0.2.180"
